[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "hexasset"
version = "0.1.0"
description = "Find matching Xcode colour assets by hex value."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ash" }]
keywords = ["xcode", "xcassets", "colorset", "cli"]
dependencies = []

[project.scripts]
hexasset = "hexasset.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]